[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Items/Sprites/ItemOutline.png" type="Texture" id=1]
[ext_resource path="res://Player/InventoryDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/InventoryContainer.gd" type="Script" id=3]

[node name="InventoryContainer" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InventoryDisplay" parent="CenterContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_top = 81.0
margin_right = 213.0
margin_bottom = 99.0

[node name="ItemOutline" type="Sprite" parent="."]
position = Vector2( 128, 88 )
texture = ExtResource( 1 )

[node name="ExtraItemOutline" type="Sprite" parent="."]
position = Vector2( 72, 90 )
texture = ExtResource( 1 )

[node name="TempItem" type="Sprite" parent="."]
